Tue Oct 30 11:02:22 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add weight and percent members to
	  SearchResult objects.

Mon Oct 29 21:21:27 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* README: Update to tell users to use the tarballs from the libs/
	  subdirectory.

Mon Oct 29 21:19:01 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Fix setting of the prefix to use the correct form of add_prefix,
	  and fix the expected output of scale weight queries to use the
	  new style of output.

Mon Oct 29 20:19:27 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/win32msvc.tgz,libs/xapian-bindings-xappy.tgz,
	  libs/xapian-core-xappy.tgz: Add tarballs containing a suitable
	  version of xapian to use with xappy.

Mon Oct 29 15:07:00 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Turn off the max_mem_use setting by
	  default, so we don't mess up performance of existing applications.

Mon Oct 29 14:59:26 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Increase estimate of amount of memory
	  used, based on profiling observations.

Mon Oct 29 14:14:04 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/spell_correct_1.py: Add unittest
	  demonstrating problem with spelling correction.

Mon Oct 29 14:08:59 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/memutils.py: New file, which gets the total amount of
	  physical memory on the system (for windows and POSIX).
	* xappy/indexerconnection.py: Add set_max_mem_use(), which causes
	  an automatic flush if more than a certain (configurable) amount
	  of memory is used.  This should help to avoid using all the
	  memory for buffered changes, resulting in swapping.  The estimate
	  of the memory used is fairly primitive, though, so could do with