@@ -1,3 +1,7 @@
+Tue Oct 30 11:12:28 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Document the members of SearchResult.
+
 Tue Oct 30 11:02:22 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add weight and percent members to
